added optional Exceptions